--- a/blogpost.html
+++ b/blogpost.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>blogpost</title>
+    <title>el titulo del blogpost</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <h1>aqui vamos hacer un blog post</h1>
-    <p>este es el parrafo de inicio</p>
+    <div id="container">
+      <div id="post">
+        <h1>aqui vamos hacer un blog post</h1>
+        <p>este es el parrafo de inicio</p>
+      </div>
+    </div>
   </body>
 </html>
