--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="container">
+      <div id="cabecera">Cabecera</div>
       <div id="post">
         <h1>aqui vamos hacer un blog post</h1>
         <p>este es el parrafo de inicio</p>
