--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div id="container">
-      <div id="cabecera">Cabecera</div>
+      <div id="cabecera">
+        Hyperblog <span id="tagline">el blog de prueba</span>
+      </div>
       <div id="post">
         <h1>aqui vamos hacer un blog post</h1>
         <p>este es el parrafo de inicio</p>
